--- a/scripts.d/.env-hydro-ng-v99
+++ b/scripts.d/.env-hydro-ng-v99
@@ -12,7 +12,7 @@ SCBI_CLANG_VERSION=12
 
 [[ -f ${SCBI_ENV_DIR}/.env-ng-shared-defs ]] &&
     source ${SCBI_ENV_DIR}/.env-ng-shared-defs
-
-SCBI_BDIR=$SCBI_ROOT/build-hydro-ng-dev
-SCBI_GIT_REPO=$HOME/dev/git
-SCBI_PLAN=hydro-ng-dev
+SCBI_ROOT=$HOME/v99
+SCBI_BDIR=$SCBI_ROOT/build-hydro-ng-v99
+SCBI_GIT_REPO=$HOME/v99/git
+SCBI_PLAN=hydro-ng-v99
