.env-hydro-ng-v99: Add SCBI_EXTRA_NG_MODULES variable

--- a/scripts.d/.env-hydro-ng-v99
+++ b/scripts.d/.env-hydro-ng-v99
@@ -16,3 +16,5 @@ SCBI_ROOT=$HOME/v99
 SCBI_BDIR=$SCBI_ROOT/build-hydro-ng-v99
 SCBI_GIT_REPO=$HOME/v99/git
 SCBI_PLAN=hydro-ng-v99
+SCBI_EXTRA_NG_MODULES=${SCBI_EXTRA_NG_MODULES:-s-hydro}
+
