--- a/scripts.d/.env-hydro-ng-dev
+++ b/scripts.d/.env-hydro-ng-dev
@@ -15,6 +15,5 @@ SCBI_CLANG_VERSION=12
 SCBI_ROOT=$HOME/v99
 SCBI_BDIR=$SCBI_ROOT/build-hydro-ng-v99
 SCBI_GIT_REPO=$HOME/v99/git
-SCBI_PLAN=hydro-ng-v99
-SCBI_EXTRA_NG_MODULES=${SCBI_EXTRA_NG_MODULES:-s-hydro}
-
+SCBI_PLAN=hydro-ng-dev
+SCBI_EXTRA_NG_MODULES=${SCBI_EXTRA_NG_MODULES:-s-hydrosolver:s-hydrogeo:s-metis-hydro:s-telemac}
