hydro-ng-v99 > hydro-ng-dev: end

--- a/scripts.d/.env-hydro-ng-dev
+++ b/scripts.d/.env-hydro-ng-dev
@@ -12,8 +12,8 @@ SCBI_CLANG_VERSION=12
 
 [[ -f ${SCBI_ENV_DIR}/.env-ng-shared-defs ]] &&
     source ${SCBI_ENV_DIR}/.env-ng-shared-defs
-SCBI_ROOT=$HOME/v99
-SCBI_BDIR=$SCBI_ROOT/build-hydro-ng-v99
-SCBI_GIT_REPO=$HOME/v99/git
+SCBI_ROOT=$HOME/dev
+SCBI_BDIR=$SCBI_ROOT/build-hydro-ng-dev
+SCBI_GIT_REPO=$HOME/dev/git
 SCBI_PLAN=hydro-ng-dev
 SCBI_EXTRA_NG_MODULES=${SCBI_EXTRA_NG_MODULES:-s-hydrosolver:s-hydrogeo:s-metis-hydro:s-telemac}
